# workshop_airflow_dbt

./: README.md
1_local_setup/: .gitignore  Dockerfile  pyproject.toml
1_local_setup/.astro/: config.yaml
1_local_setup/dags/: dag_asset_aware.py
1_local_setup/jornada_dw/: dbt_project.yml
1_local_setup/jornada_dw/seeds/: cadastros.csv
